--- a/Index.html
+++ b/Index.html
@@ -6,11 +6,12 @@
   <meta name="author" content="Kunal Dixit">
   <meta name="description" content="Serving the yummiest delicious waffles at your doorstep in delhi">
   <meta name="keyword" content="Waffles, delhi, yummy, yummiest, delicious, bakery, cakes, pasteries, bread, fresh, home, baked, hygiene, hygenic">
-  <link href="../styles/960_12_col.css"  type="text/css" rel="stylesheet"><!-- Css links to be added-->
+  <link href="../styles/Sample-1-Stylesheet-page.css"  type="text/css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Livvic:300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div id="container_12 clearfix">
+  <div id="container">
     <header>
       <h1>Waffles Le Lou</h1>
       <nav>
@@ -25,22 +26,22 @@
 
 <!-- Images needs to be checked for resolution - Should not exceed 72px-->
         <div id="content">
-          <article>
+          <article id="article1">
             <h2> Waffles</h2>
             <figure>
-              <img src="../images/Waffles-berries.jpg" alt="Waffles" />
+              <img src="../images/Waffles-berries.jpg" class="imgsize"alt="Waffles" />
               <figcaption>Waffles</figcaption>
             </figure>
 
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-          </article>
+          </article id="article2">
           <!-- This is the end of article 1-->
           <article>
             <h2>Cakes</h2>
             <figure>
-              <img src="../images/cake2.jpg" alt="Cake" />
+              <img src="../images/cake2.jpg" class="imgsize" alt="Cake" />
               <figcaption>Cakes</figcaption>
             </figure>
             <p>
@@ -49,10 +50,10 @@
 
           </article>
           <!-- This is the end of article 2-->
-          <article>
+          <article id="article3">
             <h2>Breads</h2>
             <figure>
-              <img src="../images/Bread.jpg" alt="Breads" />
+              <img src="../images/Bread.jpg" class="imgsize" alt="Breads" />
               <figcaption>Breads</figcaption>
             </figure>
             <p>
@@ -72,6 +73,8 @@
             <p>
               <label for="email">Sign up for offers: <br />
                 <input type="email" id="email" name="email" maxlength="50"></label>
+
+                <!-- Put a Waffle icon for Submit-->
                 <input type="submit" value="Submit">
                 </p>
               </form>
