--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Kunal Dixit">
   <meta name="description" content="Serving the yummiest delicious waffles at your doorstep in delhi">
   <meta name="keyword" content="Waffles, delhi, yummy, yummiest, delicious, bakery, cakes, pasteries, bread, fresh, home, baked, hygiene, hygenic">
-  <link href="../styles/Sample-1-Stylesheet-page.css"  type="text/css" rel="stylesheet">
+  <link href="./Sample-1-Stylesheet-page.css"  type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Livvic:300&display=swap" rel="stylesheet">
 </head>
 
@@ -14,6 +14,7 @@
   <div id="container">
     <header>
       <h1>Waffles Le Lou</h1>
+      <!-- <h2>Test Github Push</h2> -->
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
